Blocks will now heal where there is currently fire and soul fire. Small refactor